--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -19,6 +19,7 @@
 
 \pagenumbering{roman}
 \tableofcontents
+\listoftables
 \newpage
 
 
@@ -27,6 +28,8 @@
 \pagestyle{main}
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter\ (#1)}{}}
 \subfile{Week1/week1.tex}
+
+\printbibliography[heading=bibintoc]
 
 
 
