Introduction and Review

--- a/Notes/Week1/week1.tex
+++ b/Notes/Week1/week1.tex
@@ -11,7 +11,72 @@
 \chapter{Review and Intro to NMR}
 \section{Introduction and Review}
 \begin{itemize}
-    \item \marginnote{1/11:}
+    \item \marginnote{1/11:}We're skipping alcohols and ethers and coming back later because that's what third quarter really focuses on.
+    \item What you need to worry about is class content --- if he doesn't mention it, even if it's in the book, we won't be responsible for it on exams.
+    \item Natural products inspire new drugs.
+    \begin{itemize}
+        \item Salicylic acid mediates pain, but it will erode the lining of your stomach.
+        \item Hoffmann functionalizes the alcohol to an ester, removing the negative effects and creating aspirin.
+    \end{itemize}
+    \item Sucrose (table sugar) is glucose plus fructose. Glucose tastes slightly less sweet, and fructose tastes a whole lot sweeter.
+    \item We now consume 120 pounds of sugar per person per year, different from 20 pounds per person per year in 1976 and 1 pound per person per year in older times.
+    \begin{itemize}
+        \item So we have developed artificial sweeteners that cut calories, such as saccharin, aspartame, and sucralose.
+        \item Sucralose is thermally stable (you can bake with it), has no chloric content, and is made from sugar by protecting some alcohols and replacing others with chlorines.
+    \end{itemize}
+    \item Capsaicin (spiciness) evolved to prevent bugs from biting their host plants.
+    \begin{itemize}
+        \item Both capsaicin and resiniferatoxin have the same vanillin group; thus, this group is probably important for reacting with pain receptors.
+    \end{itemize}
+    \item Compactin from mushrooms lowers cholesterol.
+    \begin{itemize}
+        \item Zocor and lipitol are derived from it!
+    \end{itemize}
+    \item Taxol (breast cancer treatment) accumulates slowly in rare trees.
+    \begin{itemize}
+        \item We can derive from the needles (a renewable resource), however, a compound that is easily functionalized to taxol.
+    \end{itemize}
+    \item It is essential to understand the mechanisms in this course!
+    \begin{itemize}
+        \item We won't have to worry much about competing reactivity, but we do need to know how reactivity can change in different situations.
+    \end{itemize}
+    \item Quinine treats malaria.
+    \begin{itemize}
+        \item Quinine is what makes fizzy water taste bitter.
+        \item In trying to fabricate Quinine, Perkin discovers a compound that dyes fabric purple. Never gets his PhD but makes millions off of this invention. Before, only royals could wear purple (the sole source was mediterranean sea slugs).
+    \end{itemize}
+    \item Identify S\textsubscript{N}1 by the fact that all chiral information in the reactant will be lost.
+    \item Identify S\textsubscript{N}2 by the inversion of stereochemistry.
+    \item We won't worry much about E1 this quarter.
+    \item We'll see a lot of E2 this quarter.
+    \item We'll look into radical and pericyclic (Diels-Alder) reactions this quarter.
+    \item Molecules that may look similar can actually be quite different.
+    \item Color is related to the number of double bonds in a molecule.
+    \item Blue lobsters are blue because they have enough of an enzyme to sequester all of the colorant in the shells of the lobsters.
+    \begin{itemize}
+        \item Would you pay more for it because of its rare color? Probably shouldn't because cooking it will still make it red. It won't taste any better.
+    \end{itemize}
+    \item Fleming and penicillin.
+    \begin{itemize}
+        \item Initially we have no idea what its structure is.
+        \item It's hard to synthesize something if we have no idea what it is.
+        \item During WWII, American and Britain embark on a campaign to synthesize penicillin equal in scope to the Manhatten project, but it wasn't successful.
+        \item Eventually, Dorthy Crowfoot Hodgkin gets its structure with x-ray crystallography, after wrong attempts from R. B. Woodward and Sir Robert Robinson (future Nobel laureates who hated each other).
+        \item The moldy cantaloupe.
+        \item In 1955, John Sheehan at MIT comes up with the first chemical reagent capable of synthesizing penicillin's 4-membered ring.
+        \item But we made too many antibiotics and antibiotic resistance developed.
+        \item MRSA is only killed by vancomycin, but they're even developing resistance to that.
+        \item Thinking chemically to get off the pesticide treadmill.
+        \item We need the sophistication of nature to build molecules more complex than we can build en masse pharmaceutically.
+        \item As species go extinct, though, we are losing potential weapons.
+    \end{itemize}
+    \item X-ray crystallography pinpoints the location of all atoms other than hydrogen in a molecule.
+    \item Line-angle is gonna be big this quarter.
+    \item We will not be tested on IUPAC nomenclature, but we should know it just to be able to communicate.
+    \item Talks about resonance and induction.
+    \item The IR spectroscopic signal of a carbonyl is $\SI{1700}{\per\centi\meter}$.
+    \item Resonance affects acidity and IR spectroscopy --- bonds that resonate (have less double bond character) will have lower IR frequencies.
+    \item A lot of reactions are quenched by an \ce{H3O+} workup --- just enough to quench, not enough to react.
 \end{itemize}
 
 
