--- a/preamble.tex
+++ b/preamble.tex
@@ -33,7 +33,7 @@
 
 \colorlet{rex}{magenta}
 
-\sisetup{range-phrase=--,range-units=single}
+\sisetup{range-phrase=-,range-units=single}
 
 \setchemfig{atom sep=2em,fixed length=true,bond offset=3pt,cram width=3pt}
 \setcharge{extra sep=3pt}
