--- a/preamble.tex
+++ b/preamble.tex
@@ -4,6 +4,7 @@
 \usepackage{marginnote}
 \usepackage{enumitem}
 \usepackage[style=apa]{biblatex}
+\usepackage{float}
 \usepackage{tikz}
 \usepackage{siunitx}
 \usepackage{amsmath,amssymb}
@@ -34,6 +35,7 @@
 \colorlet{rex}{magenta}
 
 \sisetup{range-phrase=-,range-units=single}
+\DeclareSIUnit{\calorie}{cal}
 
 \setchemfig{atom sep=2em,fixed length=true,bond offset=3pt,cram width=3pt}
 \setcharge{extra sep=3pt}
